# cpp-proposals-pub

./: .gitmodules  D1684.md  D1XXX.md  P1684.md  README.md
D1673/: D1673R13-running-revision.html  P1673.bs  P1673.md  P1673R10.html  P1673R11.html  P1673R12.html  P1673R13.html  P1673R4.html  P1673R8.html  P1673R9.html  blas_interface.md  build.sh  layout.md
D1674/: P1674R2.html  evolution-of-a-linear-algebra-library.txt  evolving-from-blas.md
P0009/: D0009r10.md  D0009r11.md  D0009r11b.md  D0009r7.html  Makefile  P0009.bs  P0009.html  P0009.md  P0009.rst  P0009r11.md  P0009r12.md  P0009r17-premerge.html  P0009r7.html  P0009r9.html  changes.md  lewg-review-11-21.md
P0009/prototype/include/: mdspan  mdspan_helper.hpp
P0009/prototype/test/: test_mdspan.cpp
P0009/reference-implementation/: CMakeLists.txt  README  README.md  make_single_file.py  mdspan_single_file.hpp
P0009/reference-implementation/compile_test/: CMakeLists.txt
P0009/reference-implementation/compile_test/layout_left/: access.cpp.erb
P0009/reference-implementation/compile_test/layout_right/: access.cpp.erb
P0009/reference-implementation/include/: accessor_policy.hpp  extents.hpp  layouts.hpp  mdspan  mdspan.hpp  mdspan_helper.hpp  subspan.hpp
P0009/reference-implementation/include/experimental/: mdspan
P0009/reference-implementation/include/experimental/bits/: accessor_atomic_ref.hpp  extents.hpp  layouts.hpp  mdspan.hpp  subspan.hpp
P0009/reference-implementation/test/: CMakeLists.txt  build.sh  test_extents.cpp  test_layouts.cpp  test_main.cpp  test_mdspan.cpp  test_subspan.cpp
P0009/wg21/: Makefile
P0009/wg21/data/: index.yaml  metadata.yaml
P0019/: D0019.html  D0019r7.html  Makefile  P0019.bs  P0019r7.html  P0019r8.html  atomic_ref.hpp  atomic_ref_test.cpp
P0454/: P0454r1.bs
P0860/: D0860r1.html  Makefile  P0860.bs  P0860r1.html
P0971/: P0971.bs
P0971/implementation/: CMakeLists.txt
P0971/implementation/examples/: CMakeLists.txt  test.cpp  test_executors.cpp
P0971/implementation/include/: CMakeLists.txt
P0971/implementation/include/experimental/: CMakeLists.txt  async_ptr  execution  future  thread_pool
P0971/implementation/include/experimental/detail/: CMakeLists.txt  async_ptr.impl.hpp  async_ptr_control_base.hpp  future.impl.hpp  static_thread_pool.impl.hpp  static_thread_pool_fwd.hpp
P1123/: Makefile  P1123.bs  P1123r0.html
P1348/: p1348.bs
P1370/: numeric_limits_experiences.txt
P1372/: P1372.bs
P1403/: P1403.bs
P1632/source/: atomic-ref-alt.tex  config.tex  cover-wd.tex  std.tex  threads.aux
P1684-mdarray/: D1684R5a.html  P1684.html  P1684.md  P1684R4.html  P1684R5.html
P2553/: P2553.html  P2553.md
P2554/: P2554.md  multi-dimensional-deduction.md
P2798-fix-default-constructed-mappings/: P2798.html  P2798.md
P3242/: P3242.html  P3242.md  mdspan_copy.html  mdspan_copy.md
aligned_accessor/: P2897R0.html  P2897R1.html  P2897R2.html  P2897R3.html  P2897R4.html  P2897R5.html  aligned_accessor.md
atomic_accessor/: atomic_accessor.html  atomic_accessor.md
batched_blas/: P2901R0.html  batched_blas.md
blas-interface/: blas_interface.md
conjugated/: P3050R0.html  P3050R1.html  conjugated.md
extents-type/: extents-typed.md
fix-rankk-rank2k/: P3371R0.html  README  fix-rankk-rank2k.md
issaquah-20230210-P1673-presentation/: issaquah-20230210-P1673-presentation.html  issaquah-20230210-P1673-presentation.md
layout_padded/: D2642R1.html  D2642R2.html  D2642R4.html  P2642R0.html  P2642R1.html  P2642R2.html  P2642R3.html  P2642R4.html  P2642R5.html  P2642R6.html  build.sh  layout_padded.bs  layout_padded.html  layout_padded.md
layout_stride_fix/: layout_stride_fix.html  layout_stride_fix.md
mdspan-c-array-deduction/: mdspan-c-array-deduction.md
mdspan_copy/: mdspan_copy.html  mdspan_copy.md
submdspan/: Makefile  submdspan.html  submdspan.md
submdspan-fixes/: P3355R0.html  submdspan-fixes.md
submdspan/with-customization-point/: submdspan.html  submdspan.md
transposed/: Makefile  P3222R0.html  transposed.md
